# tBotSheduler

./: .dockerignore  .env.example  .gitignore  API_MAP.md  BUG_ISSUE.md  CLAUDE.md  CODEBASE_INVENTORY.md  Dockerfile  MILESTONES.md  TASC_SPEC.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/memory/: MEMORY.md  project-third-party-api.md
deploy/: backup.sh  setup-vps.sh  tbotsheduler.service
src/tbot_sheduler/: __main__.py  app.py
src/tbot_sheduler/api/: booking.py  health.py  router.py  webapp.py
src/tbot_sheduler/bot/: __init__.py  admin_handlers.py  booking_service.py  developer_handlers.py  export_service.py  forgotten_service.py  handlers.py  notification_service.py  scheduler.py  slot_handlers.py  waiting_service.py
src/tbot_sheduler/core/: auth.py  config.py  database.py  deps.py  logging.py  rate_limiter.py  security.py  tz_utils.py
src/tbot_sheduler/models/: __init__.py  admin.py  audit_log.py  booking.py  channel.py  notification.py  slot.py  waiting.py
src/tbot_sheduler/webapp/: book.html  (+1 more)
tests/: conftest.py
tests/integration/: test_admin_handlers.py  test_booking_flow.py  test_developer_handlers.py  test_health.py  test_health_edge.py
tests/unit/: test_anti_flood.py  test_config.py  test_database.py  test_database_init.py  test_export.py  test_forgotten.py  test_handlers.py  test_health_formatting.py  test_logging.py  test_models.py  test_notification_service.py  test_rate_limiter.py  test_scheduler.py  test_security.py  test_security_initdata.py  test_shutdown.py  test_tz_utils.py  test_waiting.py  test_waiting_queue.py
